option(
    'MultipleHeaders',
    type: 'boolean',
    value: true,
    description: 'Use non-amalgomated version of the library',
)
option(
    'GlobalUDLs',
    type: 'boolean',
    value: true,
    description: 'Place user-defined string literals in the global namespace',
)
option(
    'ImplicitConversions',
    type: 'boolean',
    value: true,
    description: 'Enable implicit conversions',
)
